<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:minWidth="260dp">

    <TextView
        android:layout_marginBottom="15dp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:textStyle="bold"
        android:textSize="17dp"
        android:textColor="@color/tw__solid_white"
        android:id="@+id/form_announcement_title_bar"
        android:background="@color/primaryColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_announcement_title_bar"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/form_announcement_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/com_facebook_blue"
        android:text="@string/form_announcement_title"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002" />

    <EditText
        android:id="@+id/form_announcement_titleEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_announcement_title_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/form_announcement_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_announcement_description"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/form_announcement_descriptionEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.26"
        android:ems="10"
        android:hint="@string/form_announcement_description_hint"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/form_announcement_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_announcement_location"
        android:textAlignment="center" />

    <fragment
        android:tag="place_verify_form"
        android:id="@+id/place_autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        />

    <TextView
        android:id="@+id/form_announcement_reward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Recompensa oferta: 0 AgoraCoins"
        android:textAlignment="center" />

    <SeekBar
        android:id="@+id/form_announcement_rewardEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"/>

    <Button
        android:id="@+id/btn_form_announcement_publish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_announcement_publish" />

</LinearLayout>