<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pes.agorapp.fragments.MarketplaceFragment">

    <TextView
        android:textStyle="bold"
        android:textSize="17dp"
        android:background="@color/primaryLightColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_wallet_title"
        android:id="@+id/marketplace_wallet_title"
        android:gravity="center_horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp" />

    <TextView
        android:layout_below="@+id/marketplace_wallet_title"
        android:textSize="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_wallet_subtitle"
        android:id="@+id/marketplace_wallet_subtitle"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_below="@+id/marketplace_wallet_subtitle"
        android:textColor="@color/secondaryColor"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_wallet_coins"
        android:id="@+id/marketplace_wallet_coins"
        android:gravity="center_horizontal"
        android:layout_margin="10dp" />

    <TextView
        android:layout_below="@+id/marketplace_wallet_coins"
        android:id="@+id/merchantHeader"
        android:textStyle="bold"
        android:textSize="17dp"
        android:background="@color/primaryLightColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Botiguer verificat"
        android:gravity="center_horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp" />

    <TextView
        android:layout_below="@+id/merchantHeader"
        android:id="@+id/text_marketplace_publish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Com a comerciant verificat, pots publicar cupons per a la teva botiga *** "
        android:gravity="center_horizontal"/>

    <Button
        android:layout_below="@+id/text_marketplace_publish"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:id="@+id/btn_marketplace_publish"
        android:text="@string/marketplace_publish_button"
        android:enabled="true"
        android:layout_width="match_parent"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/secondaryColor"
        android:textColor="@color/tw__solid_white" />

    <TextView
        android:layout_below="@+id/btn_marketplace_publish"
        android:id="@+id/listCouponsHeader"
        android:textStyle="bold"
        android:textSize="17dp"
        android:background="@color/primaryLightColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Cupons disponibles"
        android:gravity="center_horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp" />

    <ListView
        android:id="@+id/listCoupons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/listCouponsHeader"
        android:layout_marginTop="15dp"/>

</RelativeLayout>